--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
   "bugs": {
     "url": "https://github.com/snollygolly/koa-hbs/issues"
   },
-  "homepage": "https://github.com/snollygolly/koa-hbs#readme"
+  "homepage": "https://github.com/snollygolly/koa-hbs#readme",
+  "dependencies": {
+    "glob": "^13.0.3",
+    "handlebars": "^4.7.8"
+  }
 }
